Fixed Bug #72213 (Finally leaks on nested exceptions)